--- a/mythesis.bib
+++ b/mythesis.bib
@@ -1,8 +1,10 @@
 %% Obtained via the getNewBibTeX script and the SPIRES biblio service
 
-%%-----------%%
-%% CHAPTER 1 %%
-%%-----------%%
+%%---------------------%%
+%%----- CHAPTER 1 -----%%
+%%---------------------%%
+
+
 
 %% Fritz Zwicky 1933 ()
 @Article{Fritz_Zwicky_1993,
@@ -385,7 +387,9 @@
       SLACcitation   = "%%CITATION = INSPIRE-405909;%%"
 }
 
+
 %% Dark Matter & WIMPs %%
+%%---------------------%%
 
 %% Axions and CP 
 @article{axions_cp,
@@ -477,4 +481,976 @@ author = "C.G. Callan and R.F. Dashen and D.J. Gross",
   publisher = {American Physical Society},
   doi = {10.1103/PhysRevLett.49.1549},
   url = {https://link.aps.org/doi/10.1103/PhysRevLett.49.1549}
+}
+
+
+%% Searching for Axion using magnetic fields
+@article{axion_searches,
+  title = {Experimental Tests of the "Invisible" Axion},
+  author = {Sikivie, P.},
+  journal = {Phys. Rev. Lett.},
+  volume = {51},
+  issue = {16},
+  pages = {1415--1417},
+  numpages = {0},
+  year = {1983},
+  month = {Oct},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.51.1415},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.51.1415}
+}
+
+%% ADMX
+@article{ADMX_2010,
+  title = {SQUID-Based Microwave Cavity Search for Dark-Matter Axions},
+  author = {Asztalos, S. J. and Carosi, G. and Hagmann, C. and Kinion, D. and van Bibber, K. and Hotz, M. and Rosenberg, L. J and Rybka, G. and Hoskins, J. and Hwang, J. and Sikivie, P. and Tanner, D. B. and Bradley, R. and Clarke, J.},
+  journal = {Phys. Rev. Lett.},
+  volume = {104},
+  issue = {4},
+  pages = {041301},
+  numpages = {4},
+  year = {2010},
+  month = {Jan},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.104.041301},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.104.041301}
+}
+
+%% Neutrino mixing summary
+@article{aless2006neutrino,
+    title={Neutrino masses and mixings and...},
+    author={Alessandro Strumia and Francesco Vissani},
+    year={2006},
+    eprint={hep-ph/0606054},
+    archivePrefix={arXiv},
+    primaryClass={hep-ph}
+}
+
+%% Neutrino mass from cosmology
+@article{Lesgourgues_2012,
+   title={Neutrino Mass from Cosmology},
+   volume={2012},
+   ISSN={1687-7365},
+   url={http://dx.doi.org/10.1155/2012/608515},
+   DOI={10.1155/2012/608515},
+   journal={Advances in High Energy Physics},
+   publisher={Hindawi Limited},
+   author={Lesgourgues, Julien and Pastor, Sergio},
+   year={2012},
+   pages={1–34}
+}
+
+%% KATRIN Experiment
+@article{katrin_experiment,
+title = "Status of the KATRIN Experiment and Prospects to Search for keV-mass Sterile Neutrinos in Tritium β-decay",
+journal = "Physics Procedia",
+volume = "61",
+pages = "267 - 273",
+year = "2015",
+note = "13th International Conference on Topics in Astroparticle and Underground Physics, TAUP 2013",
+issn = "1875-3892",
+doi = "https://doi.org/10.1016/j.phpro.2014.12.043",
+url = "http://www.sciencedirect.com/science/article/pii/S1875389214006567",
+author = "Susanne Mertens",
+}
+
+%% KATRIN limits on absolute neutrino mass
+@article{katrin_results,
+   title={Improved Upper Limit on the Neutrino Mass from a Direct Kinematic Method by KATRIN},
+   volume={123},
+   ISSN={1079-7114},
+   url={http://dx.doi.org/10.1103/PhysRevLett.123.221802},
+   DOI={10.1103/physrevlett.123.221802},
+   number={22},
+   journal={Physical Review Letters},
+   publisher={American Physical Society (APS)},
+   author={Aker, M. and Altenmüller, K. and Arenz, M. and Babutzka, M. and Barrett, J. and Bauer, S. and Beck, M. and Beglarian, A. and Behrens, J. and Bergmann, T. and et al.},
+   year={2019},
+   month={Nov}
+}
+
+%% Seesaw review
+@article{King_2003,
+   title={Neutrino mass models},
+   volume={67},
+   ISSN={1361-6633},
+   url={http://dx.doi.org/10.1088/0034-4885/67/2/R01},
+   DOI={10.1088/0034-4885/67/2/r01},
+   number={2},
+   journal={Reports on Progress in Physics},
+   publisher={IOP Publishing},
+   author={King, S F},
+   year={2003},
+   month={Dec},
+   pages={107–157}
+}
+
+%% Sterile neutrinos as Dark matter
+@article{Dodelson_1994,
+   title={Sterile neutrinos as dark matter},
+   volume={72},
+   ISSN={0031-9007},
+   url={http://dx.doi.org/10.1103/PhysRevLett.72.17},
+   DOI={10.1103/physrevlett.72.17},
+   number={1},
+   journal={Physical Review Letters},
+   publisher={American Physical Society (APS)},
+   author={Dodelson, Scott and Widrow, Lawrence M.},
+   year={1994},
+   month={Jan},
+   pages={17–20}
+}
+
+%% Light sterile neutrinos
+@article{Gariazzo_2015,
+   title={Light sterile neutrinos},
+   volume={43},
+   ISSN={1361-6471},
+   url={http://dx.doi.org/10.1088/0954-3899/43/3/033001},
+   DOI={10.1088/0954-3899/43/3/033001},
+   number={3},
+   journal={Journal of Physics G: Nuclear and Particle Physics},
+   publisher={IOP Publishing},
+   author={Gariazzo, S and Giunti, C and Laveder, M and Li, Y F and Zavanin, E M},
+   year={2015},
+   month={Mar},
+   pages={033001}
+}
+
+%% Miniboon results
+@article{Aguilar_Arevalo_2018,
+   title={Significant Excess of Electronlike Events in the MiniBooNE Short-Baseline Neutrino Experiment},
+   volume={121},
+   ISSN={1079-7114},
+   url={http://dx.doi.org/10.1103/PhysRevLett.121.221801},
+   DOI={10.1103/physrevlett.121.221801},
+   number={22},
+   journal={Physical Review Letters},
+   publisher={American Physical Society (APS)},
+   author={Aguilar-Arevalo, A. A. and Brown, B. C. and Bugel, L. and Cheng, G. and Conrad, J. M. and Cooper, R. L. and Dharmapalan, R. and Diaz, A. and Djurcic, Z. and Finley, D. A. and et al.},
+   year={2018},
+   month={Nov}
+}
+
+
+
+
+@article{Bertone_2005,
+   title={Particle dark matter: evidence, candidates and constraints},
+   volume={405},
+   ISSN={0370-1573},
+   url={http://dx.doi.org/10.1016/j.physrep.2004.08.031},
+   DOI={10.1016/j.physrep.2004.08.031},
+   number={5-6},
+   journal={Physics Reports},
+   publisher={Elsevier BV},
+   author={Bertone, Gianfranco and Hooper, Dan and Silk, Joseph},
+   year={2005},
+   month={Jan},
+   pages={279–390}
+}
+
+%% WIMP Dark Matter %%
+%%------------------%%
+
+%% WIMP calculations
+@article{Bertone_2005,
+   title={Particle dark matter: evidence, candidates and constraints},
+   volume={405},
+   ISSN={0370-1573},
+   url={http://dx.doi.org/10.1016/j.physrep.2004.08.031},
+   DOI={10.1016/j.physrep.2004.08.031},
+   number={5-6},
+   journal={Physics Reports},
+   publisher={Elsevier BV},
+   author={Bertone, Gianfranco and Hooper, Dan and Silk, Joseph},
+   year={2005},
+   month={Jan},
+   pages={279–390}
+}
+
+%% Dark matter book
+@book{Bertone_book,
+      author         = "Silk, J. and others",
+      editor         = "Bertone, Gianfranco",
+      title          = "{Particle Dark Matter: Observations, Models and
+                        Searches}",
+      publisher      = "Cambridge Univ. Press",
+      address        = "Cambridge",
+      year           = "2010",
+      url            = "http://www.cambridge.org/uk/catalogue/catalogue.asp?isbn=9780521763684",
+      doi            = "10.1017/CBO9780511770739",
+      ISBN           = "9781107653924",
+      SLACcitation   = "%%CITATION = INSPIRE-895273;%%"
+}
+
+%% WIMP Freezeout plot
+@article{Feng_2010,
+   title={Dark Matter Candidates from Particle Physics and Methods of Detection},
+   volume={48},
+   ISSN={1545-4282},
+   url={http://dx.doi.org/10.1146/annurev-astro-082708-101659},
+   DOI={10.1146/annurev-astro-082708-101659},
+   number={1},
+   journal={Annual Review of Astronomy and Astrophysics},
+   publisher={Annual Reviews},
+   author={Feng, Jonathan L.},
+   year={2010},
+   month={Aug},
+   pages={495–545}
+}
+
+%% Supersymmetry
+@article{Jungman_1996,
+   title={Supersymmetric dark matter},
+   volume={267},
+   ISSN={0370-1573},
+   url={http://dx.doi.org/10.1016/0370-1573(95)00058-5},
+   DOI={10.1016/0370-1573(95)00058-5},
+   number={5-6},
+   journal={Physics Reports},
+   publisher={Elsevier BV},
+   author={Jungman, Gerard and Kamionkowski, Marc and Griest, Kim},
+   year={1996},
+   month={Mar},
+   pages={195–373}
+}
+
+%% Search for neutralinos
+@article{Athron_2019,
+   title={Combined collider constraints on neutralinos and charginos},
+   volume={79},
+   ISSN={1434-6052},
+   url={http://dx.doi.org/10.1140/epjc/s10052-019-6837-x},
+   DOI={10.1140/epjc/s10052-019-6837-x},
+   number={5},
+   journal={The European Physical Journal C},
+   publisher={Springer Science and Business Media LLC},
+   author={Athron, Peter and Balázs, Csaba and Buckley, Andy and Cornell, Jonathan M. and Danninger, Matthias and Farmer, Ben and Fowlie, Andrew and Gonzalo, Tomás E. and Harz, Julia and et al.},
+   year={2019},
+   month={May}
+}
+
+%% Local DM Density 
+@article{Read_2014,
+   title={The local dark matter density},
+   volume={41},
+   ISSN={1361-6471},
+   url={http://dx.doi.org/10.1088/0954-3899/41/6/063101},
+   DOI={10.1088/0954-3899/41/6/063101},
+   number={6},
+   journal={Journal of Physics G: Nuclear and Particle Physics},
+   publisher={IOP Publishing},
+   author={Read, J I},
+   year={2014},
+   month={May},
+   pages={063101}
+}
+
+%% Gaia Data release
+@article{Gaia_2018,
+   title={GaiaData Release 2},
+   volume={616},
+   ISSN={1432-0746},
+   url={http://dx.doi.org/10.1051/0004-6361/201833051},
+   DOI={10.1051/0004-6361/201833051},
+   journal={Astronomy & Astrophysics},
+   publisher={EDP Sciences},
+   author={Brown, A. G. A. and Vallenari, A. and Prusti, T. and de Bruijne, J. H. J. and Babusiaux, C. and Bailer-Jones, C. A. L. and Biermann, M. and Evans, D. W. and Eyer, L. and et al.},
+   year={2018},
+   month={Aug},
+   pages={A1}
+}
+
+%% Local density updated
+@article{Sivertsson_2018,
+   title={The localdark matter density from SDSS-SEGUE G-dwarfs},
+   volume={478},
+   ISSN={1365-2966},
+   url={http://dx.doi.org/10.1093/mnras/sty977},
+   DOI={10.1093/mnras/sty977},
+   number={2},
+   journal={Monthly Notices of the Royal Astronomical Society},
+   publisher={Oxford University Press (OUP)},
+   author={Sivertsson, S and Silverwood, H and Read, J I and Bertone, G and Steger, P},
+   year={2018},
+   month={Apr},
+   pages={1677–1693}
+}
+
+%% Distance of galaxy from center
+@article{galaxy_center_distance,
+    author = {Reid, Mark J.},
+    title = {The Distance to the Center of the Galaxy},
+    journal = {Annual Review of Astronomy and Astrophysics},
+    volume = {31},
+    number = {1},
+    pages = {345-372},
+    year = {1993},
+    doi = {10.1146/annurev.aa.31.090193.002021},
+    URL = {https://doi.org/10.1146/annurev.aa.31.090193.002021},
+    eprint = {https://doi.org/10.1146/annurev.aa.31.090193.002021}
+}
+
+%% Local speed of sun
+@article{Bovy_2012,
+   title={THE MILKY WAY’S CIRCULAR-VELOCITY CURVE BETWEEN 4 AND 14 kpc FROM APOGEE DATA},
+   volume={759},
+   ISSN={1538-4357},
+   url={http://dx.doi.org/10.1088/0004-637X/759/2/131},
+   DOI={10.1088/0004-637x/759/2/131},
+   number={2},
+   journal={The Astrophysical Journal},
+   publisher={IOP Publishing},
+   author={Bovy, Jo and Allende Prieto, Carlos and Beers, Timothy C. and Bizyaev, Dmitry and da Costa, Luiz N. and Cunha, Katia and Ebelke, Garrett L. and Eisenstein, Daniel J. and Frinchaboy, Peter M. and García Pérez, Ana Elia and et al.},
+   year={2012},
+   month={Oct},
+   pages={131}
+}
+
+%% Local speed
+@article{canonical_speed,
+       author = {{Kerr}, F.~J. and {Lynden-Bell}, D.},
+        title = "{Review of galactic constants.}",
+      journal = {\mnras},
+     keywords = {Astrophysics, Constants, Milky Way Galaxy, Galactic Rotation, Mass Distribution, Oort Cloud, Radial Velocity, Stellar Motions, Sun, Variable Stars, Astrophysics},
+         year = "1986",
+        month = "Aug",
+       volume = {221},
+        pages = {1023-1038},
+          doi = {10.1093/mnras/221.4.1023},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1986MNRAS.221.1023K},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+%% Escape velocity
+@article{Smith_2007,
+   title={The RAVE survey: constraining the local Galactic escape speed},
+   volume={379},
+   ISSN={1365-2966},
+   url={http://dx.doi.org/10.1111/j.1365-2966.2007.11964.x},
+   DOI={10.1111/j.1365-2966.2007.11964.x},
+   number={2},
+   journal={Monthly Notices of the Royal Astronomical Society},
+   publisher={Oxford University Press (OUP)},
+   author={Smith, M. C. and Ruchti, G. R. and Helmi, A. and Wyse, R. F. G. and Fulbright, J. P. and Freeman, K. C. and Navarro, J. F. and Seabroke, G. M. and Steinmetz, M. and Williams, M. and et al.},
+   year={2007},
+   month={Aug},
+   pages={755–772}
+}
+
+%% Local steller kinematics
+@article{Dehnen_1998,
+   title={Local stellar kinematics from Hipparcos data},
+   volume={298},
+   ISSN={1365-2966},
+   url={http://dx.doi.org/10.1046/j.1365-8711.1998.01600.x},
+   DOI={10.1046/j.1365-8711.1998.01600.x},
+   number={2},
+   journal={Monthly Notices of the Royal Astronomical Society},
+   publisher={Oxford University Press (OUP)},
+   author={Dehnen, W. and Binney, J. J.},
+   year={1998},
+   month={Aug},
+   pages={387–394}
+}
+
+%% Dark matter detection
+@article{Detectability_of_dm,
+  title = {Detectability of certain dark-matter candidates},
+  author = {Goodman, Mark W. and Witten, Edward},
+  journal = {Phys. Rev. D},
+  volume = {31},
+  issue = {12},
+  pages = {3059--3063},
+  numpages = {0},
+  year = {1985},
+  month = {Jun},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevD.31.3059},
+  url = {https://link.aps.org/doi/10.1103/PhysRevD.31.3059}
+}
+
+%% Nuclear form factors for WIMPs
+@article{nuclear_form_wimp,
+      author         = "Engel, J.",
+      title          = "{Nuclear form-factors for the scattering of weakly
+                        interacting massive particles}",
+      journal        = "Phys. Lett.",
+      volume         = "B264",
+      year           = "1991",
+      pages          = "114-119",
+      doi            = "10.1016/0370-2693(91)90712-Y",
+      SLACcitation   = "%%CITATION = PHLTA,B264,114;%%"
+}
+
+%% Direct detection
+
+%% DM rates in detectors
+@article{Baudis_2012,
+   title={Direct dark matter detection: The next decade},
+   volume={1},
+   ISSN={2212-6864},
+   url={http://dx.doi.org/10.1016/j.dark.2012.10.006},
+   DOI={10.1016/j.dark.2012.10.006},
+   number={1-2},
+   journal={Physics of the Dark Universe},
+   publisher={Elsevier BV},
+   author={Baudis, Laura},
+   year={2012},
+   month={Nov},
+   pages={94–108}
+}
+
+%% ZEPLIN-I Experiment
+@article{zeplin_1,
+title = "First limits on nuclear recoil events from the ZEPLIN I galactic dark matter detector",
+journal = "Astroparticle Physics",
+volume = "23",
+number = "5",
+pages = "444 - 462",
+year = "2005",
+issn = "0927-6505",
+doi = "https://doi.org/10.1016/j.astropartphys.2005.02.004",
+url = "http://www.sciencedirect.com/science/article/pii/S0927650505000289",
+author = "G.J. Alner and H. Araujo and G.J. Arnison and J.C. Barton and A. Bewick and C. Bungau and B. Camanzi and M.J. Carson and D. Davidge and  J.V.Dawson and G.J. Davies and J.C. Davies and T. Durkin and T. Gamble and S.P. Hart and R.J. Hollingworth and G.J. Homer and A.S. Howard and I. Ivaniouchenkov and W.G. Jones and M.K. Joshi and V.A. Kudryavtsev and T.B. Lawson and V. Lebedenko and J.D. Lewin and P.K. Lightfoot and I. Liubarsky and M.J. Lehner and R. Lüscher and J.E. McMillan and B. Morgan and A. Nicholls and G. Nicklin and S.M. Paling and R.M. Preece and J.W. Roberts and M. Robinson and J.J. Quenby and N.J.T. Smith and P.F. Smith and N.J.C. Spooner and T.J. Sumner and D.R. Tovey",
+keywords = "Dark matter, WIMPs, Scintillation detectors, Liquid xenon, Pulse shape analysis",
+}
+
+%% XMASS Experiment
+@article{xmass,
+      author         = "Liu, Jing",
+      title          = "{The XMASS experiment}",
+      booktitle      = "{Proceedings, Workshop on Dark Matter, Neutrino Physics
+                        and Astrophysics CETUP* 2013: 7th International Conference
+                        on Interconnection between Particle Physics and Cosmology
+                        (PPC 2013): Lead/Deadwood, South Dakota, USA, July, 8-13,
+                        2013}",
+      collaboration  = "XMASS",
+      journal        = "AIP Conf. Proc.",
+      volume         = "1604",
+      year           = "2015",
+      number         = "1",
+      pages          = "397-401",
+      doi            = "10.1063/1.4883456",
+      SLACcitation   = "%%CITATION = APCPC,1604,397;%%"
+}
+
+%% DEAP Experiment
+@article{deap,
+   title={Measurement of the scintillation time spectra and pulse-shape discrimination of low-energy β and nuclear recoils in liquid argon with DEAP-1},
+   volume={85},
+   ISSN={0927-6505},
+   url={http://dx.doi.org/10.1016/j.astropartphys.2016.09.002},
+   DOI={10.1016/j.astropartphys.2016.09.002},
+   journal={Astroparticle Physics},
+   publisher={Elsevier BV},
+   author={Amaudruz, P.-A. and Batygov, M. and Beltran, B. and Bonatt, J. and Boudjemline, K. and Boulay, M.G. and Broerman, B. and Bueno, J.F. and Butcher, A. and Cai, B. and et al.},
+   year={2016},
+   month={Dec},
+   pages={1–23}
+}
+
+%% XENON-100
+@article{xenon100,
+      author         = "Aprile, E. and others",
+      title          = "{Search for WIMP Inelastic Scattering off Xenon Nuclei
+                        with XENON100}",
+      collaboration  = "XENON",
+      journal        = "Phys. Rev.",
+      volume         = "D96",
+      year           = "2017",
+      number         = "2",
+      pages          = "022008",
+      doi            = "10.1103/PhysRevD.96.022008",
+      eprint         = "1705.05830",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      SLACcitation   = "%%CITATION = ARXIV:1705.05830;%%"
+}
+
+%% ZEPLIN-II
+@article{zeplin2,
+title = "Status of the ZEPLIN II experiment",
+journal = "New Astronomy Reviews",
+volume = "49",
+number = "2",
+pages = "259 - 263",
+year = "2005",
+note = "Sources and Detection of Dark Matter and Dark Energy in the Universe",
+issn = "1387-6473",
+doi = "https://doi.org/10.1016/j.newar.2005.02.002",
+url = "http://www.sciencedirect.com/science/article/pii/S1387647305000618",
+author = "G.J. Alner and M. Atac and A. Bewick and C. Bungau and B. Camanzi and M.J. Carson and C. Ghag and Y. Chen and D.B. Cline and D. Davidge and J. Davis and E. Daw and J.V. Dawson and T.J. Durkin and T. Ferbel and T. Gamble and J. Gao and A.S. Howard and W.G. Jones and M.K. Joshi and V.A. Kudryavtsev and T.B. Lawson and V. Lebedenko and J.D. Lewin and P.K. Lightfoot and I. Liubarsky and R. Luscher and J.E. McMillan and B. Morgan and A.S. Murphy and S.M. Paling and R.M. Preece and J.J. Quenby and M. Robinson and U. Schroeder and F. Sergiampietri and W. Skulski and N.J.T. Smith and P. Smith and P.F. Smith and N.J.C. Spooner and T.J. Sumner and J. Toke and D.R. Tovey and R. Walker and H. Wang and J.T. White and F. Wolfs and X. Yang",
+keywords = "Dark matter, WIMP, Two-phase, Xenon, Discriminating",
+}
+
+%% ZEPLIN-III 
+@article{zeplin3,
+   title={Results from the first science run of the ZEPLIN-III dark matter search experiment},
+   volume={80},
+   ISSN={1550-2368},
+   url={http://dx.doi.org/10.1103/PhysRevD.80.052010},
+   DOI={10.1103/physrevd.80.052010},
+   number={5},
+   journal={Physical Review D},
+   publisher={American Physical Society (APS)},
+   author={Lebedenko, V. N. and Araújo, H. M. and Barnes, E. J. and Bewick, A. and Cashmore, R. and Chepel, V. and Currie, A. and Davidge, D. and Dawson, J. and Durkin, T. and et al.},
+   year={2009},
+   month={Sep}
+}
+
+%% PANDA-X
+@article{pandax,
+   title={Dark matter direct search sensitivity of the PandaX-4T experiment},
+   volume={62},
+   ISSN={1869-1927},
+   url={http://dx.doi.org/10.1007/s11433-018-9259-0},
+   DOI={10.1007/s11433-018-9259-0},
+   number={3},
+   journal={Science China Physics, Mechanics & Astronomy},
+   publisher={Springer Science and Business Media LLC},
+   author={Zhang, HongGuang and Abdukerim, Abdusalam and Chen, Wei and Chen, Xun and Chen, YunHua and Cui, XiangYi and Dong, BinBin and Fang, DeQing and Fu, ChangBo and Giboni, Karl and et al.},
+   year={2018},
+   month={Aug}
+}
+
+%% DIRECT DETECTION GENERAL LIMITS
+%% SuperCDMS – Light
+@article{CDMS_2016,
+  title = {New Results from the Search for Low-Mass Weakly Interacting Massive Particles with the CDMS Low Ionization Threshold Experiment},
+  author = {Agnese, R. and Anderson, A. J. and Aramaki, T. and Asai, M. and Baker, W. and Balakishiyeva, D. and Barker, D. and Basu Thakur, R. and Bauer, D. A. and Billard, J. and Borgland, A. and Bowles, M. A. and Brink, P. L. and Bunker, R. and Cabrera, B. and Caldwell, D. O. and Calkins, R. and Cerdeno, D. G. and Chagani, H. and Chen, Y. and Cooley, J. and Cornell, B. and Cushman, P. and Daal, M. and Di Stefano, P. C. F. and Doughty, T. and Esteban, L. and Fallows, S. and Figueroa-Feliciano, E. and Ghaith, M. and Godfrey, G. L. and Golwala, S. R. and Hall, J. and Harris, H. R. and Hofer, T. and Holmgren, D. and Hsu, L. and Huber, M. E. and Jardin, D. and Jastram, A. and Kamaev, O. and Kara, B. and Kelsey, M. H. and Kennedy, A. and Leder, A. and Loer, B. and Lopez Asamar, E. and Lukens, P. and Mahapatra, R. and Mandic, V. and Mast, N. and Mirabolfathi, N. and Moffatt, R. A. and Morales Mendoza, J. D. and Oser, S. M. and Page, K. and Page, W. A. and Partridge, R. and Pepin, M. and Phipps, A. and Prasad, K. and Pyle, M. and Qiu, H. and Rau, W. and Redl, P. and Reisetter, A. and Ricci, Y. and Roberts, A. and Rogers, H. E. and Saab, T. and Sadoulet, B. and Sander, J. and Schneck, K. and Schnee, R. W. and Scorza, S. and Serfass, B. and Shank, B. and Speller, D. and Toback, D. and Underwood, R. and Upadhyayula, S. and Villano, A. N. and Welliver, B. and Wilson, J. S. and Wright, D. H. and Yellin, S. and Yen, J. J. and Young, B. A. and Zhang, J.},
+  collaboration = {SuperCDMS Collaboration},
+  journal = {Phys. Rev. Lett.},
+  volume = {116},
+  issue = {7},
+  pages = {071301},
+  numpages = {6},
+  year = {2016},
+  month = {Feb},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.116.071301},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.116.071301}
+}
+
+%% SuperCDMS
+@article{CDMS_2018,
+  title = {Results from the Super Cryogenic Dark Matter Search Experiment at Soudan},
+  author = {Agnese, R. and Aramaki, T. and Arnquist, I. J. and Baker, W. and Balakishiyeva, D. and Banik, S. and Barker, D. and Basu Thakur, R. and Bauer},
+  collaboration = {SuperCDMS Collaboration},
+  journal = {Phys. Rev. Lett.},
+  volume = {120},
+  issue = {6},
+  pages = {061802},
+  numpages = {7},
+  year = {2018},
+  month = {Feb},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.120.061802},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.120.061802}
+}
+
+%% DarkSide-50 Low Mass
+@article{darkside_50_lm,
+  title = {Low-Mass Dark Matter Search with the DarkSide-50 Experiment},
+  author = {Agnes, P. and Albuquerque, I. F. M. and Alexander, T. and Alton, A. K. and Araujo, G. R. and Asner, D. M. and Ave, M. and Back, H. O. and Baldin, B. and Batignani},
+  collaboration = {DarkSide Collaboration},
+  journal = {Phys. Rev. Lett.},
+  volume = {121},
+  issue = {8},
+  pages = {081307},
+  numpages = {8},
+  year = {2018},
+  month = {Aug},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.121.081307},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.121.081307}
+}
+
+%% LUX Extended Low Mass
+@misc{lux_extended,
+    title={Extending light WIMP searches to single scintillation photons in LUX},
+    author={D. S. Akerib and S. Alsum and H. M. Araújo and X. Bai and A. J. Bailey and J. Balajthy and A. Baxter and P. Beltrame and E. P. Bernard},
+    year={2019},
+    eprint={1907.06272},
+    archivePrefix={arXiv},
+    primaryClass={astro-ph.CO}
+}
+
+%% DarkSide_50
+@article{darkside_50,
+      author         = "Agnes, P. and others",
+      title          = "{DarkSide-50 532-day Dark Matter Search with
+                        Low-Radioactivity Argon}",
+      collaboration  = "DarkSide",
+      journal        = "Phys. Rev.",
+      volume         = "D98",
+      year           = "2018",
+      number         = "10",
+      pages          = "102006",
+      doi            = "10.1103/PhysRevD.98.102006",
+      eprint         = "1802.07198",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph.CO",
+      reportNumber   = "FERMILAB-PUB-18-053-AD-AE-CD-E",
+      SLACcitation   = "%%CITATION = ARXIV:1802.07198;%%"
+}
+
+%% DEAP-3600 Result
+@article{DEAP_3600,
+   title={Search for dark matter with a 231-day exposure of liquid argon using DEAP-3600 at SNOLAB},
+   volume={100},
+   ISSN={2470-0029},
+   url={http://dx.doi.org/10.1103/PhysRevD.100.022004},
+   DOI={10.1103/physrevd.100.022004},
+   number={2},
+   journal={Physical Review D},
+   publisher={American Physical Society (APS)},
+   author={Ajaj, R. and Amaudruz, P.-A. and Araujo, G. R. and Baldwin, M. and Batygov, M. and Beltran, B. and Bina, C. E. and Bonatt, J. and Boulay, M. G. and Broerman, B. and et al.},
+   year={2019},
+   month={Jul}
+}
+
+%% LUX Complete results 
+@article{lux_full,
+      author         = "Akerib, D. S. and others",
+      title          = "{Results from a search for dark matter in the complete
+                        LUX exposure}",
+      collaboration  = "LUX",
+      journal        = "Phys. Rev. Lett.",
+      volume         = "118",
+      year           = "2017",
+      number         = "2",
+      pages          = "021303",
+      doi            = "10.1103/PhysRevLett.118.021303",
+      eprint         = "1608.07648",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph.CO",
+      SLACcitation   = "%%CITATION = ARXIV:1608.07648;%%"
+}
+
+%% Xenon-1T
+@article{xenon_1t,
+   title={Dark Matter Search Results from a One Ton-Year Exposure of XENON1T},
+   volume={121},
+   ISSN={1079-7114},
+   url={http://dx.doi.org/10.1103/PhysRevLett.121.111302},
+   DOI={10.1103/physrevlett.121.111302},
+   number={11},
+   journal={Physical Review Letters},
+   publisher={American Physical Society (APS)},
+   author={Aprile, E. and Aalbers, J. and Agostini, F. and Alfonsi, M. and Althueser, L. and Amaro, F. D. and Anthony, M. and Arneodo, F. and Baudis, L. and Bauermeister, B. and et al.},
+   year={2018},
+   month={Sep}
+}
+
+%% PandaX limits
+@article{pandax_limit,
+   title={Dark Matter Results from 54-Ton-Day Exposure of PandaX-II Experiment},
+   volume={119},
+   ISSN={1079-7114},
+   url={http://dx.doi.org/10.1103/PhysRevLett.119.181302},
+   DOI={10.1103/physrevlett.119.181302},
+   number={18},
+   journal={Physical Review Letters},
+   publisher={American Physical Society (APS)},
+   author={Cui, Xiangyi and Abdukerim, Abdusalam and Chen, Wei and Chen, Xun and Chen, Yunhua and Dong, Binbin and Fang, Deqing and Fu, Changbo and Giboni, Karl and Giuliani, Franco and et al.},
+   year={2017},
+   month={Oct}
+}
+
+
+%% Likelihood analysis of pMSSM11
+@article{pMSSM11,
+   title={Likelihood analysis of the pMSSM11 in light of LHC 13-TeV data},
+   volume={78},
+   ISSN={1434-6052},
+   url={http://dx.doi.org/10.1140/epjc/s10052-018-5697-0},
+   DOI={10.1140/epjc/s10052-018-5697-0},
+   number={3},
+   journal={The European Physical Journal C},
+   publisher={Springer Science and Business Media LLC},
+   author={Bagnaschi, E. and Sakurai, K. and Borsato, M. and Buchmueller, O. and Citron, M. and Costa, J. C. and De Roeck, A. and Dolan, M. J. and Ellis, J. R. and Flächer, H. and et al.},
+   year={2018},
+   month={Mar}
+}
+
+%% Neutrino floor – Billard
+@article{neutrino_floor,
+   title={Complementarity of dark matter detectors in light of the neutrino background},
+   volume={90},
+   ISSN={1550-2368},
+   url={http://dx.doi.org/10.1103/PhysRevD.90.083510},
+   DOI={10.1103/physrevd.90.083510},
+   number={8},
+   journal={Physical Review D},
+   publisher={American Physical Society (APS)},
+   author={Ruppin, F. and Billard, J. and Figueroa-Feliciano, E. and Strigari, L.},
+   year={2014},
+   month={Oct}
+}
+
+%% DAMA/LIBRA
+@article{dama_libra,
+      author         = "Bernabei, R. and others",
+      title          = "{First results from DAMA/LIBRA and the combined results
+                        with DAMA/NaI}",
+      collaboration  = "DAMA",
+      journal        = "Eur. Phys. J.",
+      volume         = "C56",
+      year           = "2008",
+      pages          = "333-355",
+      doi            = "10.1140/epjc/s10052-008-0662-y",
+      eprint         = "0804.2741",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph",
+      reportNumber   = "ROM2F-2008-07",
+      SLACcitation   = "%%CITATION = ARXIV:0804.2741;%%"
+}
+
+%% DAMA/LIBRA new reasults
+@article{dama_libra_new ,
+      author         = "Bernabei, R. and others",
+      title          = "{New results from DAMA/LIBRA}",
+      collaboration  = "DAMA, LIBRA",
+      journal        = "Eur. Phys. J.",
+      volume         = "C67",
+      year           = "2010",
+      pages          = "39-49",
+      doi            = "10.1140/epjc/s10052-010-1303-9",
+      eprint         = "1002.1028",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph.GA",
+      SLACcitation   = "%%CITATION = ARXIV:1002.1028;%%"
+}
+
+%% COSINE-100
+@article{cosine_100,
+      author         = "Adhikari, G. and others",
+      title          = "{Search for a Dark Matter-Induced Annual Modulation
+                        Signal in NaI(Tl) with the COSINE-100 Experiment}",
+      collaboration  = "COSINE-100",
+      journal        = "Phys. Rev. Lett.",
+      volume         = "123",
+      year           = "2019",
+      number         = "3",
+      pages          = "031302",
+      doi            = "10.1103/PhysRevLett.123.031302",
+      eprint         = "1903.10098",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph.IM",
+      SLACcitation   = "%%CITATION = ARXIV:1903.10098;%%"
+}
+
+%% SABRE Experiment
+@misc{sabre,
+    title={Dark matter search with the SABRE experiment},
+    author={Paolo Montini},
+    year={2018},
+    eprint={1807.08073},
+    archivePrefix={arXiv},
+    primaryClass={physics.ins-det}
+}
+
+%% EDELWEISS Experiment
+@article{edelweiss,
+      author         = "Armengaud, E. and others",
+      title          = "{Performance of the EDELWEISS-III experiment for direct
+                        dark matter searches}",
+      collaboration  = "EDELWEISS",
+      journal        = "JINST",
+      volume         = "12",
+      year           = "2017",
+      number         = "08",
+      pages          = "P08010",
+      doi            = "10.1088/1748-0221/12/08/P08010",
+      eprint         = "1706.01070",
+      archivePrefix  = "arXiv",
+      primaryClass   = "physics.ins-det",
+      SLACcitation   = "%%CITATION = ARXIV:1706.01070;%%"
+}
+
+%% CDMS
+@article{cdms,
+      author         = "Mirabolfathi, N. and others",
+      title          = "{The Cryogenic Dark Matter Search (CDMS) experiment:
+                        Results, status and perspective}",
+      booktitle      = "{Proceedings, 13th International Workshop on Low
+                        Temperature Detectors (LTD13): Stanford, California, July
+                        20-24, 2009}",
+      journal        = "AIP Conf. Proc.",
+      volume         = "1185",
+      year           = "2009",
+      number         = "1",
+      pages          = "623",
+      doi            = "10.1063/1.3292418",
+      SLACcitation   = "%%CITATION = APCPC,1185,623;%%"
+}
+
+%% CRESST
+@article{cresst,
+      author         = "Schieck, J. and others",
+      title          = "{Direct Dark Matter Search with the CRESST II
+                        Experiment}",
+      booktitle      = "{Proceedings, 38th International Conference on High
+                        Energy Physics (ICHEP 2016): Chicago, IL, USA, August
+                        3-10, 2016}",
+      journal        = "PoS",
+      volume         = "ICHEP2016",
+      year           = "2016",
+      pages          = "217",
+      doi            = "10.22323/1.282.0217",
+      eprint         = "1611.02113",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph.CO",
+      SLACcitation   = "%%CITATION = ARXIV:1611.02113;%%"
+}
+
+%% Low-mass searches with CRESST-3
+@article{cresst_3,
+      author         = "Abdelhameed, A. H. and others",
+      title          = "{First results from the CRESST-III low-mass dark matter
+                        program}",
+      collaboration  = "CRESST",
+      journal        = "Phys. Rev.",
+      volume         = "D100",
+      year           = "2019",
+      number         = "10",
+      pages          = "102002",
+      doi            = "10.1103/PhysRevD.100.102002",
+      eprint         = "1904.00498",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph.CO",
+      SLACcitation   = "%%CITATION = ARXIV:1904.00498;%%"
+}
+
+%%---------------------%%
+%%----- CHAPTER 1 -----%%
+%%---------------------%%
+
+
+%% SECTION 2.1 Dual-Phase Xenon TPCs
+
+%% Overview of TPC technology 
+@article{tpc_technology,
+title = "Detection of energy deposition down to the keV region using liquid xenon scintillation",
+journal = "Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment",
+volume = "327",
+number = "1",
+pages = "203 - 206",
+year = "1993",
+issn = "0168-9002",
+doi = "https://doi.org/10.1016/0168-9002(93)91442-P",
+url = "http://www.sciencedirect.com/science/article/pii/016890029391442P",
+author = "P. Benetti and E. Calligarich and R. Dolfini and A. Gigli Berzolari and F. Mauri and L. Mazzone and C. Montanari and A. Piazzoli and A. Rappoldi and G.L. Raselli and D. Scannicchio and A. Bettini and F. Casagrande and P. Casoli and S. Centro and B. Dainese and C. De Vecchi and F. Gasparini and G. Muratori and A. Pepato and F. Pietropaolo and P. Rossi and S. Suzuki and S. Ventura and C. Castagnoli and G. Mannocchi and L. Periale and F. Cavanna and G. Piano Mortari and P. Cennini and S. Cittolin and C. Rubbia and M. Cheng and D. Cline and S. Otwinowski and M. Zhou and L. Fortson and P. Picchi and H. Wang",
+abstract = "A possible method for WIMPs detection using liquid xenon scintillation is discussed [1]. Background from cosmic and radioactive gamma rays at energies down to the keV region can be easily rejected by requiring the presence of proportional scintillation. The results from a basic test are presented and a prototype detector design is proposed."
+}
+
+%% SECTION 2.2 
+
+%% Platzman Equation
+@article{Platzman,
+  title = {Liquid xenon detectors for particle physics and astrophysics},
+  author = {Aprile, E. and Doke, T.},
+  journal = {Rev. Mod. Phys.},
+  volume = {82},
+  issue = {3},
+  pages = {2053--2097},
+  numpages = {0},
+  year = {2010},
+  month = {Jul},
+  publisher = {American Physical Society},
+  doi = {10.1103/RevModPhys.82.2053},
+  url = {https://link.aps.org/doi/10.1103/RevModPhys.82.2053}
+}
+
+%% W-value
+@article{PhysRevA.48.1313,
+  title = {W value in liquid krypton},
+  author = {Aprile, E. and Bolotnikov, A. and Chen, D. and Mukherjee, R.},
+  journal = {Phys. Rev. A},
+  volume = {48},
+  issue = {2},
+  pages = {1313--1318},
+  numpages = {0},
+  year = {1993},
+  month = {Aug},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevA.48.1313},
+  url = {https://link.aps.org/doi/10.1103/PhysRevA.48.1313}
+}
+
+
+%% Xenon physics (Henrique and Vitaly)
+@article{xenon_physics,
+      author         = "Chepel, V. and Araujo, H.",
+      title          = "{Liquid noble gas detectors for low energy particle
+                        physics}",
+      journal        = "JINST",
+      volume         = "8",
+      year           = "2013",
+      pages          = "R04001",
+      doi            = "10.1088/1748-0221/8/04/R04001",
+      eprint         = "1207.2292",
+      archivePrefix  = "arXiv",
+      primaryClass   = "physics.ins-det",
+      SLACcitation   = "%%CITATION = ARXIV:1207.2292;%%"
+}
+
+%% Xenon VUV photons
+@article{FUJII2015293,
+title = "High-accuracy measurement of the emission spectrum of liquid xenon in the vacuum ultraviolet region",
+journal = "Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment",
+volume = "795",
+pages = "293 - 297",
+year = "2015",
+issn = "0168-9002",
+doi = "https://doi.org/10.1016/j.nima.2015.05.065",
+url = "http://www.sciencedirect.com/science/article/pii/S016890021500724X",
+author = "Keiko Fujii and Yuya Endo and Yui Torigoe and Shogo Nakamura and Tomiyoshi Haruyama and Katsuyu Kasami and Satoshi Mihara and Kiwamu Saito and Shinichi Sasaki and Hiroko Tawara",
+}
+
+%% Bi-excitonic Quenching
+@article{bi_excitonic,
+  title = {Effect of ionization density on the time dependence of luminescence from liquid argon and xenon},
+  author = {Hitachi, Akira and Takahashi, Tan and Funayama, Nobutaka and Masuda, Kimiaki and Kikuchi, Jun and Doke, Tadayoshi},
+  journal = {Phys. Rev. B},
+  volume = {27},
+  issue = {9},
+  pages = {5279--5285},
+  numpages = {0},
+  year = {1983},
+  month = {May},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevB.27.5279},
+  url = {https://link.aps.org/doi/10.1103/PhysRevB.27.5279}
+}
+
+%% Dahl Thesis
+@phdthesis{Dahl,
+      author         = "Dahl, Carl Eric",
+      title          = "{The physics of background discrimination in liquid
+                        xenon, and first results from Xenon10 in the hunt for WIMP
+                        dark matter}",
+      school         = "Princeton U.",
+      year           = "2009",
+      url            = "https://www.princeton.edu/physics/graduate-program/theses/theses-from-2009/E.Dahlthesis.pdf",
+      reportNumber   = "AAT-3364532",
+      SLACcitation   = "%%CITATION = AAT-3364532;%%"
+}
+
+%% Electron drift
+@article{e_drift,
+  title = {Charge Transport in Solid and Liquid Ar, Kr, and Xe},
+  author = {Miller, L. S. and Howe, S. and Spear, W. E.},
+  journal = {Phys. Rev.},
+  volume = {166},
+  issue = {3},
+  pages = {871--878},
+  numpages = {0},
+  year = {1968},
+  month = {Feb},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRev.166.871},
+  url = {https://link.aps.org/doi/10.1103/PhysRev.166.871}
 }
